JBR-5928: regression test for keyboard OSR