@@ -21,6 +21,8 @@ if (!OperatingSystem.current().isMacOsX()) {
 }
 
 sourceSets.test.java.srcDirs = ['../../../java_tests']
+sourceSets.test.resources.srcDirs = ['../../../java_tests/tests/junittests/data']
+sourceSets.test.output.resourcesDir = 'build/classes/java/test/tests/junittests/data'
 
 compileJava.options.compilerArgs += [
     '--module-path', "$projectDir/../../../third_party/jogamp/jar",
@@ -52,6 +54,7 @@ test {
                '--add-opens=java.desktop/java.awt.peer=ALL-UNNAMED',
                '--add-exports=java.desktop/java.awt.peer=ALL-UNNAMED',
                '--add-opens=java.desktop/sun.awt=ALL-UNNAMED',
+               '--add-opens=java.desktop/java.awt.event=ALL-UNNAMED',
                '--add-exports=java.desktop/sun.awt=ALL-UNNAMED',
                '-Djcef.tests.osr=true'
     ]
@@ -64,5 +67,6 @@ dependencies {
         "$projectDir/../../../third_party/jogamp/jar/gluegen-rt.jar")
     testImplementation files(
         "$projectDir/../../../third_party/junit/junit-platform-console-standalone-1.10.0.jar",
+        "$projectDir/../../../third_party/gson/gson-2.10.1.jar",
         "$projectDir/../../../third_party/jakarta/jakarta.xml.bind-api-2.3.2.jar")
 }
